<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_the_forest">

    <TextView
        android:id="@+id/level"
        android:text="@string/level"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_level_xp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:gravity="center"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/XP"
        app:layout_constraintBottom_toTopOf="@+id/ascension" />

    <TextView
        android:id="@+id/XP"
        android:text="@string/XP"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_level_xp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:gravity="center"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/level"
        app:layout_constraintBottom_toTopOf="@+id/skills" />

    <TextView
        android:id="@+id/ascension"
        android:text="@string/ascension"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:onClick="ascension"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level"
        app:layout_constraintRight_toLeftOf="@+id/skills"
        app:layout_constraintBottom_toTopOf="@+id/herbs" />

    <TextView
        android:id="@+id/skills"
        android:text="@string/skills"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:onClick="skills"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintRight_toLeftOf="@+id/glory"
        app:layout_constraintLeft_toRightOf="@+id/ascension"
        app:layout_constraintTop_toBottomOf="@+id/XP"
        app:layout_constraintBottom_toTopOf="@+id/herbs" />

    <TextView
        android:id="@+id/glory"
        android:text="@string/glory"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:onClick="glory"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/skills"
        app:layout_constraintTop_toBottomOf="@+id/XP"
        app:layout_constraintBottom_toTopOf="@+id/herbs" />

    <TextView
        android:id="@+id/herbs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_forest"
        android:fontFamily="serif"
        android:text="@string/herbs"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center_vertical"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toTopOf="@+id/ores"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skills" />

    <TextView
        android:id="@+id/ores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_mountain"
        android:fontFamily="serif"
        android:text="@string/ores"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center_vertical"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toTopOf="@+id/soulDust"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/herbs" />

    <TextView
        android:id="@+id/soulDust"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_ruin"
        android:fontFamily="serif"
        android:text="@string/soulDust"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center_vertical"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toTopOf="@+id/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ores" />

    <TextView
        android:id="@+id/gold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_gold"
        android:fontFamily="serif"
        android:text="@string/gold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center_vertical"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toTopOf="@+id/alchemy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soulDust" />

    <TextView
        android:id="@+id/alchemy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_forest"
        android:fontFamily="serif"
        android:onClick="alchemy"
        android:text="@string/alchemy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="18.8"
        app:layout_constraintBottom_toTopOf="@+id/blacksmithing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gold" />

    <TextView
        android:id="@+id/blacksmithing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_mountain"
        android:fontFamily="serif"
        android:text="@string/blacksmithing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:onClick="blacksmithing"
        android:gravity="center"
        app:layout_constraintVertical_weight="19.4"
        app:layout_constraintBottom_toTopOf="@+id/enchanting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alchemy" />

    <TextView
        android:id="@+id/enchanting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_ruin"
        android:fontFamily="serif"
        android:text="@string/enchanting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:gravity="center"
        android:onClick="enchanting"
        app:layout_constraintVertical_weight="18.8"
        app:layout_constraintBottom_toTopOf="@+id/kingdom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blacksmithing" />

    <TextView
        android:id="@+id/gear"
        android:text="@string/gear"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:onClick="gear"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/kingdom"
        app:layout_constraintTop_toBottomOf="@+id/enchanting" />

    <TextView
        android:id="@+id/kingdom"
        android:text="@string/kingdom"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus_highlight"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/gear"
        app:layout_constraintRight_toLeftOf="@+id/quests"
        app:layout_constraintTop_toBottomOf="@+id/enchanting" />

    <TextView
        android:id="@+id/quests"
        android:text="@string/quests"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:onClick="quests"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/kingdom"
        app:layout_constraintTop_toBottomOf="@+id/enchanting" />
</android.support.constraint.ConstraintLayout>