<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_the_forest">

    <TextView
        android:id="@+id/level"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_level_xp"
        android:fontFamily="serif"
        android:text="@string/level"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/XP"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ascension" />

    <TextView
        android:id="@+id/XP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_level_xp"
        android:fontFamily="serif"
        android:text="@string/XP"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@+id/level"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/skills" />

    <TextView
        android:id="@+id/ascension"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:fontFamily="serif"
        android:onClick="ascension"
        android:text="@string/ascension"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/skills"
        app:layout_constraintTop_toBottomOf="@+id/level"
        app:layout_constraintBottom_toTopOf="@+id/ores" />

    <TextView
        android:id="@+id/skills"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:fontFamily="serif"
        android:onClick="skills"
        android:text="@string/skills"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintLeft_toRightOf="@+id/ascension"
        app:layout_constraintRight_toLeftOf="@+id/glory"
        app:layout_constraintTop_toBottomOf="@+id/XP"
        app:layout_constraintBottom_toTopOf="@+id/ores" />

    <TextView
        android:id="@+id/glory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:fontFamily="serif"
        android:onClick="glory"
        android:text="@string/glory"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintLeft_toRightOf="@+id/skills"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/XP"
        app:layout_constraintBottom_toTopOf="@+id/ores"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ores"
        android:text="@string/ores"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_mountain"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/skills"
        app:layout_constraintBottom_toTopOf="@+id/gold" />

    <TextView
        android:id="@+id/gold"
        android:text="@string/gold"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_gold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ores"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/blacksmithing" />

    <TextView
        android:id="@+id/blacksmithing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_the_mountain"
        android:fontFamily="serif"
        android:text="@string/blacksmithing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="19"
        app:layout_constraintBottom_toTopOf="@+id/offensiveGear"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gold" />

    <TextView
        android:id="@+id/offensiveGear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_offensive"
        android:fontFamily="serif"
        android:onClick="offensiveGear"
        android:text="@string/offensiveGear"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="16"
        app:layout_constraintBottom_toTopOf="@+id/defensiveGear"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blacksmithing" />

    <TextView
        android:id="@+id/defensiveGear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_defensive"
        android:fontFamily="serif"
        android:onClick="defensiveGear"
        android:text="@string/defensiveGear"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="16"
        app:layout_constraintBottom_toTopOf="@+id/sellGear"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offensiveGear" />

    <TextView
        android:id="@+id/sellGear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_gold"
        android:fontFamily="serif"
        android:onClick="sellGear"
        android:text="@string/sellGear"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="16"
        app:layout_constraintBottom_toTopOf="@+id/kingdom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defensiveGear" />

    <TextView
        android:id="@+id/gear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:fontFamily="serif"
        android:onClick="gear"
        android:text="@string/gear"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/kingdom"
        app:layout_constraintTop_toBottomOf="@+id/sellGear" />

    <TextView
        android:id="@+id/kingdom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:fontFamily="serif"
        android:onClick="kingdom"
        android:text="@string/kingdom"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/gear"
        app:layout_constraintRight_toLeftOf="@+id/quests"
        app:layout_constraintTop_toBottomOf="@+id/sellGear"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/quests"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_menus"
        android:fontFamily="serif"
        android:onClick="quests"
        android:text="@string/quests"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/kingdom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellGear"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>