<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_the_forest">

    <TextView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="normal|bold"
        android:textSize="40sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="serif"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/notifications"
        app:layout_constraintHorizontal_bias="1.0" />

    <CheckBox
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="30sp"
        android:buttonTint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sound"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <CheckBox
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textSize="30sp"
        android:buttonTint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintBottom_toTopOf="@+id/mainMenu"
        app:layout_constraintTop_toBottomOf="@+id/notifications" />

    <TextView
        android:id="@+id/mainMenu"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:onClick="mainMenu"
        android:text="@string/mainMenu"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:typeface="normal"
        android:background="@drawable/border_level_xp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound" />
</android.support.constraint.ConstraintLayout>
